--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://msavic248.github.io/qr-code-component-main/",
   "name": "qr-code-component-main",
   "private": true,
   "version": "0.0.0",
